--- a/package.json
+++ b/package.json
@@ -11,13 +11,29 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "commitmsg": "validate-commit-msg",
+    "commit": "git-cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    },
+    "validate-commit-msg": {
+      "types": "conventional-commit-types",
+      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
+    }
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.7",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
-    "typescript": "^3.0.1"
+    "commitizen": "^2.10.1",
+    "conventional-changelog-cli": "^2.0.1",
+    "husky": "^0.14.3",
+    "typescript": "^3.0.1",
+    "validate-commit-msg": "^2.14.0"
   }
 }
