--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ra-data-json-server": "^2.2.0",
     "react": "^16.4.2",
+    "react-admin": "^2.2.0",
     "react-dom": "^16.4.2",
     "react-scripts-ts": "2.17.0"
   },
@@ -24,6 +26,7 @@
     }
   },
   "devDependencies": {
+    "@blueprintjs/tslint-config": "^1.5.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.7",
     "@types/react": "^16.4.9",
@@ -31,6 +34,7 @@
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1",
     "validate-commit-msg": "^2.14.0"
   }
