--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^16.0.7",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
+    "fakerest": "^2.1.0",
     "fetch-mock": "^6.5.2",
     "husky": "^0.14.3",
     "tslint": "^5.11.0",
