feat(fakeServer): 移植 data-generator，更新 README.md
改写 data-generator 为 ts 版本，README.md 加入相关描述。加入 CustomerList 组件

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ra-data-json-server": "^2.2.0",
+    "chance": "^1.0.16",
+    "date-fns": "^1.29.0",
+    "md5": "^2.2.1",
+    "ra-data-simple-rest": "^2.2.0",
     "react": "^16.4.2",
     "react-admin": "^2.2.0",
     "react-dom": "^16.4.2",
