--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^10.5.7",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
+    "@types/recompose": "^0.26.4",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "fakerest": "^2.1.0",
