--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "chance": "^1.0.16",
     "date-fns": "^1.29.0",
     "md5": "^2.2.1",
+    "query-string": "^6.1.0",
     "ra-data-simple-rest": "^2.2.0",
     "ra-language-chinese": "^2.0.4",
     "ra-language-english": "^2.2.0",
     "react": "^16.4.2",
     "react-admin": "^2.2.0",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0"
   },
   "scripts": {
@@ -34,6 +36,7 @@
     "@blueprintjs/tslint-config": "^1.5.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.7",
+    "@types/query-string": "^6.1.0",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
     "@types/recompose": "^0.26.4",
