--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   },
   "devDependencies": {
     "@blueprintjs/tslint-config": "^1.5.0",
+    "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.7",
     "@types/query-string": "^6.1.0",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
     "@types/recompose": "^0.26.4",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
