--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "md5": "^2.2.1",
     "query-string": "^6.1.0",
     "ra-data-simple-rest": "^2.2.0",
+    "ra-input-rich-text": "^2.2.1",
     "ra-language-chinese": "^2.0.4",
     "ra-language-english": "^2.2.0",
     "react": "^16.4.2",
