docs(debug-react-admin.md): 更新 react-admin 调试分析

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     }
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@blueprintjs/tslint-config": "^1.5.0",
     "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.1",
