--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "fakerest": "^2.1.0",
     "fetch-mock": "^6.5.2",
     "husky": "^0.14.3",
+    "merge": "^1.2.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
     "validate-commit-msg": "^2.14.0"
