--- a/docs-demo/2-tutorial/my-app/package.json
+++ b/docs-demo/2-tutorial/my-app/package.json
@@ -7,7 +7,9 @@
     "@types/node": "^11.11.1",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "ra-data-json-server": "^2.7.3",
     "react": "^16.8.4",
+    "react-admin": "^2.7.3",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "typescript": "^3.3.3333"
