--- a/docs-demo/2-tutorial/my-app/package.json
+++ b/docs-demo/2-tutorial/my-app/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.1",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "query-string": "^6.3.0",
     "ra-data-json-server": "^2.7.3",
     "react": "^16.8.4",
     "react-admin": "^2.7.3",
