--- a/docs/webpack/my-project/package.json
+++ b/docs/webpack/my-project/package.json
@@ -20,6 +20,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
   },
