--- a/docs/webpack/my-project/package.json
+++ b/docs/webpack/my-project/package.json
@@ -28,6 +28,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "px2rem-loader": "^0.1.9",
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
@@ -35,6 +36,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "lib-flexible": "^0.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
