--- a/docs/webpack/my-project/package.json
+++ b/docs/webpack/my-project/package.json
@@ -29,6 +29,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
+    "raw-loader": "^0.5.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
