--- a/docs/webpack/my-project/package.json
+++ b/docs/webpack/my-project/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "ev-large-number": "^1.0.0",
     "lib-flexible": "^0.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
