--- a/docs/webpack/my-project/package.json
+++ b/docs/webpack/my-project/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch",
-    "dev": "webpack-dev-server --config webpack.dev.js  --open"
+    "dev": "webpack-dev-server --config webpack.dev.js  --open",
+    "build:ssr": "webpack --config webpack.ssr.js"
   },
   "keywords": [],
   "author": "",
