--- a/docs/webpack/my-project/package.json
+++ b/docs/webpack/my-project/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^4.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
