--- a/docs/webpack/my-project/builder-webpack/package.json
+++ b/docs/webpack/my-project/builder-webpack/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack-merge": "^4.2.2"
+  }
 }
