--- a/react-native/FlatList/package.json
+++ b/react-native/FlatList/package.json
@@ -13,6 +13,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.13",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
   },
